--- a/SourceCodes/src/null.css
+++ b/SourceCodes/src/null.css
@@ -277,8 +277,8 @@
     }
     /* Channels Selected*/
     .wrapper-1ucjTd:hover .content-3at_AU,
-    .modeSelected-1zApJ_ .content-3at_AU, 
-    .modeSelected-1zApJ_:hover .content-3at_AU,
+    .modeSelected-346R90 .content-1x5b-n, 
+    .modeSelected-346R90:hover .content-1x5b-n 
     .selected-aXhQR6 .layout-2DM8Md {
         background: var(--channel-selected);
     }
