--- a/SourceCodes/src/dd.css
+++ b/SourceCodes/src/dd.css
@@ -804,7 +804,6 @@ section .da-scroller::-webkit-scrollbar-thumb {border: none !important;}
     padding-bottom: 10px;
     font-weight: 500;
     letter-spacing: 0.08em;
-    margin-left: -7px;
 }
 .da-autocomplete h5 {
     margin-left: 7px;
@@ -1748,15 +1747,14 @@ section .da-scroller::-webkit-scrollbar-thumb {border: none !important;}
     background-color: #fffcfc;
 }
 /* Blur Email */
-.horizontal-1ae9ci>.flexChild-faoVW3 div + div .viewBody-2Qz-jg:nth-child(2){
-    filter: blur(10px);
-    transition: 350ms cubic-bezier(1, 0.17, 0.73, 0.56);
+.field-1HUseB+.field-1HUseB .colorHeaderPrimary-26Jzh-{
+    filter: blur(8px)
 }
-.horizontal-1ae9ci>.flexChild-faoVW3 div + div:hover .viewBody-2Qz-jg:nth-child(2) {
+.field-1HUseB+.field-1HUseB .colorHeaderPrimary-26Jzh-:hover {
     filter: blur(0px);
-    transition: 450ms cubic-bezier(0.9, 0.38, 0.58, 0.85);
-    transition-delay: 350ms;
+    transition: 350ms;
 }
+/* edit message svg */
 .theme-dark .da-edited {
     position: relative;
     width: 0;
