--- a/SourceCodes/src/dd.css
+++ b/SourceCodes/src/dd.css
@@ -1418,7 +1418,7 @@ section .da-scroller::-webkit-scrollbar-thumb {border: none !important;}
 .header-QKLPzZ {
     padding: 20px 20px 4px;
 }
-.activity-1ythUs {
+.userPopout-3XzG_A .activity-1ythUs {
     padding: 0 20px 10px;
 }
 .headerStreaming-2FjmGz,
