--- a/SourceCodes/src/dd.css
+++ b/SourceCodes/src/dd.css
@@ -2389,3 +2389,6 @@ svg polyline[stroke="#7289da"] {
 .connectedAccountIcon-3P3V6F[alt*="Xbox Live"] {
   content: url(/assets/850ed4fcf5839b7a32651f5959e8511e.png);
 }
+
+/**/
+.scrollerSpacer-avRLaA {height: 20px;}
