--- a/SourceCodes/src/dd.css
+++ b/SourceCodes/src/dd.css
@@ -156,7 +156,10 @@
 .option-ayUoaq:after {display:none}
 
 
-
+/* emoji layer*/
+.contentWrapper-3vHNP2 {
+    background-color: var(--background-floating);
+}
 
 /* Old Settings Modal 
 originally created by Zerebos
